Renamed .ipnybs for new figure names reflecting new order in manuscript, still need to rerun fig 8 and change the save directories in pretty much all of them

--- a/ipynbs/manuscript_figures/Figure8b_homo_rupt_onset_time_3D.ipynb
+++ b/ipynbs/manuscript_figures/Figure8b_homo_rupt_onset_time_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f75b6148-81fa-4e4a-bbb9-5d8b37d05477",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2adf8a96-5112-4957-99c2-b368ec6dbdc6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rupt_path = '/Users/sydneydybing/SW4/strain/experiments/force_hypo/homo_rupts/usgs_plane_fine_force_hypo.000001_MH2017.rupt'\n",
+    "rupt_path = '/Users/sydneydybing/SW4/strain/experiments/realistic_eq_sizes/fq_M7.000000.rupt'\n",
     "rupt = np.genfromtxt(rupt_path)\n",
     "\n",
     "# 3b: plot rupture onset on fault in 3D view\n",
@@ -32,11 +32,11 @@
     "ax = fig.add_subplot(111, projection='3d')\n",
     "# ax.set_title('M7.1 Ridgecrest earthquake fault (3D view)')\n",
     "\n",
-    "p = ax.scatter(lon, lat, depth, c=onset, cmap='viridis_r', marker='o', s=20, lw=0, label = 'Subfaults')\n",
+    "p = ax.scatter(lon, lat, depth, c=onset, cmap='turbo_r', marker='o', s=25, lw=0, label = 'Subfaults')\n",
     "\n",
     "ax.set_xlabel('Longitude', fontsize = 12)\n",
     "ax.invert_xaxis()\n",
-    "ax.set_ylabel('Latitude', fontsize = 12)\n",
+    "ax.set_ylabel('Latitude', fontsize = 12, labelpad = 10)\n",
     "ax.invert_yaxis()\n",
     "ax.set_zlabel('Depth (km)', fontsize = 12)\n",
     "\n",
@@ -51,7 +51,8 @@
     "\n",
     "# plt.show()\n",
     "\n",
-    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/Figure_4a.png', format = 'PNG')\n",
+    "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/Figure_4x.png', format = 'PNG')\n",
+    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_8b.png', format = 'PNG')\n",
     "plt.close()"
    ]
   },
