PSD noise analysis and rest of figures

--- a/ipynbs/19_strainmeter_noise_analysis.ipynb
+++ b/ipynbs/19_strainmeter_noise_analysis.ipynb
@@ -23,7 +23,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "5fbbdf7b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1452,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
