Updating figures to export high res PNGs

--- a/ipynbs/manuscript_figures/Figure10_homo_results_waveform_plots.ipynb
+++ b/ipynbs/manuscript_figures/Figure10_homo_results_waveform_plots.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "63617d05-9a93-47a1-aad2-16b937e1ed5f",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,8 @@
     "\n",
     "# plt.show();\n",
     "\n",
-    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_10.jpg', format = 'JPG')\n",
+    "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_10.jpg', format = 'JPG')\n",
+    "plt.savefig('/Users/sydneydybing/dissertation/defense_figs/strain/Figure_10.png', format = 'PNG')\n",
     "plt.close();"
    ]
   },
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "83838fa5-4a80-461d-b398-613d51f46ff5",
    "metadata": {},
    "outputs": [],
