--- a/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
+++ b/ipynbs/manuscript_figures/Figure2_peak_strain_example.ipynb
@@ -259,7 +259,8 @@
     "        \n",
     "        # plt.show();\n",
     "\n",
-    "        plt.savefig(path_to_files + 'Manuscript/Figures/renamed_figs/Figure_2.jpg', format = 'JPG')\n",
+    "        # plt.savefig(path_to_files + 'Manuscript/Figures/renamed_figs/Figure_2.jpg', format = 'JPG')\n",
+    "        plt.savefig('/Users/sydneydybing/dissertation/defense_figs/strain/Figure_2.png', format = 'PNG')\n",
     "        plt.close();"
    ]
   },
@@ -267,6 +268,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c3ac57c9-b06f-4c40-b90a-43ad8c61f12c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e08427e-ff8a-4b92-abcb-26e94941b131",
    "metadata": {},
    "outputs": [],
    "source": []
