--- a/ipynbs/manuscript_figures/Figure6_mag_trendlines.ipynb
+++ b/ipynbs/manuscript_figures/Figure6_mag_trendlines.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "8932de69-ca4b-49d0-bf45-0c5f932ae3af",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "ae4cbb1b-cb51-4871-885a-0c8d678c2928",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "78d09169-7418-4382-9a8f-576ad2887cba",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "6b16c9a9-c800-47da-98a5-01c0c8a670d1",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "4d8aadc2-b8c4-4024-a012-208853669cc7",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "7        14.5                 g  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "e202938a-e429-4d58-b84c-bd7a3678938c",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "2c514cbd-b338-40f2-90ac-d3fb4f09dae4",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "       6.5 , 6.5 , 6.  , 6.2 , 6.2 , 6.4 , 6.  ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "186c7f09-4c0c-4791-9339-1e52e2d0b94f",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "4c69e412-1879-43ea-8f17-1d0e83fc4955",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "05cc1212-3aee-4ce8-bd21-ba6da77fda60",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "172fced0-684f-4300-b1b4-24ae9c5ebeee",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "f16605e7-7889-40f7-903f-99be37697c49",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "c2e1eb29-dd35-4d89-ba47-eb5410e12ed7",
    "metadata": {},
    "outputs": [],
@@ -606,12 +606,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "154f03a5-1c72-47c7-a912-c39c4c927472",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (12, 5), dpi = 400)\n",
+    "fig = plt.figure(figsize = (12, 5), dpi = 400, facecolor = 'white')\n",
     "\n",
     "# All datasets mag vs transition time\n",
     "plt.subplot(121)\n",
@@ -669,7 +669,8 @@
     "# plt.show()\n",
     "\n",
     "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_6.jpg', format = 'JPG')\n",
-    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_6_newdetrend.jpg', format = 'JPG')\n",
+    "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_6_newdetrend.jpg', format = 'JPG')\n",
+    "plt.savefig('/Users/sydneydybing/dissertation/defense_figs/strain/Figure_6_newdetrend.png', format = 'PNG')\n",
     "plt.close();"
    ]
   },
@@ -685,6 +686,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e8fe907f-4278-4999-a3c3-3487577aaf87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a23ef3a-4b9d-494c-ab71-ebf858a7965f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3f274e-0c44-42bf-9d72-1b4cc2cad913",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af557740-b271-4375-8832-ce24ed1c4d5a",
    "metadata": {},
    "outputs": [],
    "source": []
