--- a/ipynbs/manuscript_figures/Figure8_RC_sw4_vs_real_peak_strain.ipynb
+++ b/ipynbs/manuscript_figures/Figure8_RC_sw4_vs_real_peak_strain.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "ca199243-d806-4435-8c63-a7497d0d3d21",
    "metadata": {},
    "outputs": [
@@ -385,11 +385,11 @@
     "    \n",
     "    if theo_p_arr >= 10: # Shift the peak strain backward\n",
     "        shift_amount = theo_p_arr - 10\n",
-    "        sw4_rms_strain_times = sw4_rms_strain_times - shift_amount\n",
+    "        # sw4_rms_strain_times = sw4_rms_strain_times - shift_amount\n",
     "        sw4_peak_strain_times = sw4_peak_strain_times - shift_amount\n",
     "    else: # Shift the peak strain forward\n",
     "        shift_amount = 10 - theo_p_arr\n",
-    "        sw4_rms_strain_times = sw4_rms_strain_times + shift_amount\n",
+    "        # sw4_rms_strain_times = sw4_rms_strain_times + shift_amount\n",
     "        sw4_peak_strain_times = sw4_peak_strain_times + shift_amount\n",
     "\n",
     "    ax = fig.add_subplot(3,2,count)\n",
@@ -428,7 +428,8 @@
     "\n",
     "# plt.show()\n",
     "\n",
-    "plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_8.jpg', format = 'JPG')\n",
+    "# plt.savefig('/Users/sydneydybing/StrainProject/2024/Manuscript/Figures/renamed_figs/Figure_8.jpg', format = 'JPG')\n",
+    "plt.savefig('/Users/sydneydybing/dissertation/defense_figs/strain/Figure_8.png', format = 'PNG')\n",
     "plt.close();"
    ]
   },
@@ -444,6 +445,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9f592cc-9a6d-49c5-b94c-7a009b739e4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "338d0256-2208-46f7-8a17-c555bfa580ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa80f34-1b9a-4504-91f6-ec3e22f0129d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09559471-fd3f-4afc-992c-ffadf09f97fc",
    "metadata": {},
    "outputs": [],
    "source": []
